minor IE fix for alignment in sharing modal

--- a/jsapp/scss/components/_kobo.sharing-modal.scss
+++ b/jsapp/scss/components/_kobo.sharing-modal.scss
@@ -20,7 +20,6 @@
   }
 
   &__avatar {
-  	flex:0;
     margin-right: 12px;
   }
   &__name {
@@ -28,7 +27,6 @@
     line-height: 2.2em;
   }
   &__role {
-    flex:0;
     min-width: 160px;
     text-align: right;
     line-height: 2.2em;
